# news_llm_bot

./: .gitignore  .pre-commit-config.yaml  note.ipynb  pyproject.toml
src/bot/: app.py  main.py  parser.py
src/bot/app/: __init__.py  joke_generator.py  news_updater.py  prompt.py
src/bot/models/: __init__.py  news_article.py
src/bot/services/: __init__.py  classifier.py  database.py  logging.py  scraper.py  utils.py
src/config/: config.yaml
src/models/: __init__.py  base.py
